@@ -94,6 +94,8 @@ There are just a few naming conventions:
 was already executed before.
 * Fallback selector: if a script name ends with ".fallback.groovy" then it will be executed only if
 the corresponding script failed with an exception. E.g. if there is "script.groovy" and "script.fallback.groovy" then the fallback script only gets executed if "script.groovy" fails.
+* Reserved file names
+    * fallback.groovy: optional directory level fallback script. This will be executed if a script fails and no script specific fallback script is provided.
 
 <a name="execution"></a>
 
